# ai-file-organizer

./: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  main.yml  release.yml
docs/: Application_Packaging_and_Distribution_Specification.md  Backup_Restore_System_Design.md  CI_CD_Setup.md  Component_Architecture_Guidelines.md  Downloads_Johnny_Decimal_Mapping.md  Error_Handling_and_User_Feedback_Specification.md  File_Operation_Safety_Design.md  Folder_Organizer_Design_Document.md  Incremental_Organization_Strategy.md  Naming_Conventions_Guide.md  Project_Architecture_Specification.md  TDD_Strategy_Implementation_Guide.md  Technical_Architecture.md  Theme_System_Design.md  TypeScript_Types_Specification.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  safety-system-progress.md  systemPatterns.md  techContext.md
playwright-report/: index.html
scripts/: ci-validate.sh  generate-icons.cjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_service.rs  commands.rs  database.rs  error.rs  file_operations.rs  johnny_decimal.rs  main.rs
src/test/: setup.ts
src/types/: AI.ts  FileOperation.ts  FileSystem.ts  FileSystemItem.ts  JohnnyDecimal.ts  Organization.ts  OrganizationSuggestion.ts  SafetyLevel.ts  Settings.ts  ValidationResult.ts  index.ts
tests/e2e/: app.spec.ts  debug-backend.spec.ts  (+1 more)
(+52 files in other folders)
